--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-react": "^3.1.0",
@@ -31,7 +32,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "normalize.css": "^8.0.1",
     "prettier": "^2.8.7",
+    "styled-components": "^5.3.9",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
