--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint:fix": "prettier --write --list-different ./src && eslint --fix src/**/*.{js,jsx,ts,tsx,json}"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
